--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -33,7 +33,7 @@
 
  		<div class="background-wrap">
  			<video id="video-bg-elem" preload="auto" autoplay="true" loop="true" muted="muted">
- 				<source src="C:\Users\Tautvydas\Downloads\Map-Navigation\Map-Navigation.mp4" type="video/mp4">
+ 				<source src="https://github.com/TautvydasStasiulis/Web/blob/master/Map-Navigation.mp4" type="video/mp4">
  					Video not supported
  			</video>
  		</div>
