--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -46,5 +46,12 @@
 
 </div>
 
+	<!-- START: Mobile Autoplay Video -->
+<script>
+var mobilevideo = document.getElementsByTagName("video")[0];
+mobilevideo.setAttribute("playsinline", "");
+mobilevideo.setAttribute("muted", "");
+</script>
+<!-- END: Mobile Autoplay Video -->
 </body>
 </html>
