--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -13,6 +13,7 @@
 		font-family: Calibri, sans-serif;
 	}
 	.background-wrap{
+		background-size:100%;
 		position: fixed;
 		z-index: -1000;
 		width: 100%;
