--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -13,7 +13,7 @@
 		font-family: Calibri, sans-serif;
 	}
 	.background-wrap{
-		position: fixed;
+		position: absolute;
 		z-index: -1000;
 		width: 100%;
 		height: 100%;
