--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -13,10 +13,10 @@
 		font-family: Calibri, sans-serif;
 	}
 	.background-wrap{
-		position: absolute;
+		position: fixed;
 		z-index: -1000;
-		width: 100%;
-		height: 100%;
+		width: auto;
+		height: auto;
 		overflow: hidden;
 		top: 0;
 		left: 0;
