--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -15,12 +15,11 @@
 	.background-wrap{
 		position: fixed;
 		z-index: -1000;
-		width: auto;
-		height: auto;
+		width: 100%;
+		height: 100%;
 		overflow: hidden;
 		top: 0;
 		left: 0;
-		object-fit: cover;
 
 	}
 </style> 
