--- a/naujas_puslapis.html
+++ b/naujas_puslapis.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=CIdgeUOvz9s" frameborder="0" allowfullscreen></iframe>
 	<title>Video Background</title>
 
 <style type="text/css">
